Настроил backend для работы с фронтом и окружением
